Update view model